--- a/index.html
+++ b/index.html
@@ -53,164 +53,150 @@
       </header>
 
       <section>
-        <div class="section">
-          <div class="mainView">
-            <div class="intro">
-              <img class="wind" src="./img/bestMovie.png" />
-              <div class="bt">
-                <button class="play">
-                  <i class="fa-solid fa-play fa-lg"></i>
-                  재생
-                </button>
-                <button class="infor">
-                  <i class="fa-solid fa-circle-info fa-lg"></i>
-                  상세 정보
-                </button>
-              </div>
+        <div class="mainView">
+          <div class="intro">
+            <img class="wind" src="./img/bestMovie.png" />
+            <div class="bt">
+              <button class="play">
+                <i class="fa-solid fa-play fa-lg"></i>
+                재생
+              </button>
+              <button class="infor">
+                <i class="fa-solid fa-circle-info fa-lg"></i>
+                상세 정보
+              </button>
             </div>
           </div>
+        </div>
 
-          <div class="contents">
-            <div class="video">
-              <h3>한국 드라마</h3>
-              <div class="videoList">
-                <div class="list">
-                  <img src="./img/video/drama1.png" />
-                  <img src="./img/video/drama2.png" />
-                  <img src="./img/video/drama3.png" />
-                  <img src="./img/video/drama4.png" />
-                  <img src="./img/video/drama5.png" />
-                </div>
-              </div>
+        <div class="contents">
+          <div class="video">
+            <h3>한국 드라마</h3>
+            <div class="list">
+              <img src="./img/video/drama1.png" />
+              <img src="./img/video/drama2.png" />
+              <img src="./img/video/drama3.png" />
+              <img src="./img/video/drama4.png" />
+              <img src="./img/video/drama5.png" />
             </div>
-            <div class="video">
-              <h3>최윤도 님이 시청 중인 콘텐츠</h3>
-              <div class="videoList">
-                <div class="list">
-                  <img src="./img/video/drama6.png" />
-                  <img src="./img/video/drama7.png" />
-                  <img src="./img/video/drama8.png" />
-                  <img src="./img/video/drama9.png" />
-                  <img src="./img/video/drama10.png" />
-                </div>
-              </div>
+          </div>
+          <div class="video">
+            <h3>최윤도 님이 시청 중인 콘텐츠</h3>
+            <div class="list">
+              <img src="./img/video/drama6.png" />
+              <img src="./img/video/drama7.png" />
+              <img src="./img/video/drama8.png" />
+              <img src="./img/video/drama9.png" />
+              <img src="./img/video/drama10.png" />
             </div>
-            <div class="video">
-              지금 뜨는 콘텐츠
-              <div class="videoList">
-                <div class="list">
-                  <img src="./img/video/drama11.png" />
-                  <img src="./img/video/drama12.png" />
-                  <img src="./img/video/drama13.png" />
-                  <img src="./img/video/drama14.png" />
-                  <img src="./img/video/drama15.png" />
-                </div>
-              </div>
+          </div>
+          <div class="video">
+            <h3>지금 뜨는 콘텐츠</h3>
+            <div class="list">
+              <img src="./img/video/drama11.png" />
+              <img src="./img/video/drama12.png" />
+              <img src="./img/video/drama13.png" />
+              <img src="./img/video/drama14.png" />
+              <img src="./img/video/drama15.png" />
             </div>
-            <div class="video">
-              한국 고등학교 배경 시리즈
-              <div class="videoList">
-                <div class="list">
-                  <img src="./img/video/drama16.png" />
-                  <img src="./img/video/drama17.png" />
-                  <img src="./img/video/drama18.png" />
-                  <img src="./img/video/drama19.png" />
-                  <img src="./img/video/drama20.png" />
-                </div>
-              </div>
+          </div>
+          <div class="video">
+            <h3>한국 고등학교 배경 시리즈</h3>
+            <div class="list">
+              <img src="./img/video/drama16.png" />
+              <img src="./img/video/drama17.png" />
+              <img src="./img/video/drama18.png" />
+              <img src="./img/video/drama19.png" />
+              <img src="./img/video/drama20.png" />
             </div>
           </div>
         </div>
       </section>
 
       <footer>
-        <div class="footer">
-          <div class="social">
-            <div class="socialLinks">
-              <a class="socialLink" href="https://www.facebook.com/NetflixKR">
-                <i class="fa-brands fa-facebook-f fa-lg"></i>
-              </a>
-              <a class="socialLink" href="https://www.instagram.com/netflixkr/">
-                <i class="fa-brands fa-instagram fa-lg"></i>
-              </a>
-              <a class="socialLink" href="https://twitter.com/netflixkr">
-                <i class="fa-brands fa-twitter fa-lg"></i>
-              </a>
-              <a
-                class="socialLink"
-                href="https://www.youtube.com/channel/UCiEEF51uRAeZeCo8CJFhGWw/featured"
-              >
-                <i class="fa-brands fa-youtube fa-lg"></i>
-              </a>
-            </div>
+        <div class="social">
+          <div class="socialLinks">
+            <a class="socialLink" href="https://www.facebook.com/NetflixKR">
+              <i class="fa-brands fa-facebook-f fa-lg"></i>
+            </a>
+            <a class="socialLink" href="https://www.instagram.com/netflixkr/">
+              <i class="fa-brands fa-instagram fa-lg"></i>
+            </a>
+            <a class="socialLink" href="https://twitter.com/netflixkr">
+              <i class="fa-brands fa-twitter fa-lg"></i>
+            </a>
+            <a
+              class="socialLink"
+              href="https://www.youtube.com/channel/UCiEEF51uRAeZeCo8CJFhGWw/featured"
+            >
+              <i class="fa-brands fa-youtube fa-lg"></i>
+            </a>
           </div>
-          <ul class="infoLink">
-            <li class="infoList">
-              <a href="https://www.netflix.com/browse/audio-description">
-                화면 해설
-              </a>
-            </li>
-            <li class="infoList">
-              <a href="https://help.netflix.com/ko/"> 고객 센터 </a>
-            </li>
-            <li class="infoList">
-              <a href="https://www.netflix.com/kr/redeem"> 기프트카드 </a>
-            </li>
-            <li class="infoList">
-              <a href="https://media.netflix.com/ko/"> 미디어 센터 </a>
-            </li>
-            <li class="infoList">
-              <a href="https://ir.netflix.net/ir-overview/profile/default.aspx">
-                투자 정보(IR)
-              </a>
-            </li>
-            <li class="infoList">
-              <a href="https://jobs.netflix.com/"> 입사 정보 </a>
-            </li>
-            <li class="infoList">
-              <a href="https://help.netflix.com/legal/termsofuse">
-                이용 약관
-              </a>
-            </li>
-            <li class="infoList">
-              <a href="https://help.netflix.com/legal/privacy"> 개인정보 </a>
-            </li>
-            <li class="infoList">
-              <a href="https://help.netflix.com/legal/notices"> 법적 고지 </a>
-            </li>
-            <li class="infoList">
-              <a href=""> 쿠키 설정 </a>
-            </li>
-            <li class="infoList">
-              <a href="https://help.netflix.com/legal/corpinfo"> 회사 정보 </a>
-            </li>
-            <li class="infoList">
-              <a href="https://help.netflix.com/ko/contactus"> 문의하기 </a>
-            </li>
-          </ul>
-          <div class="code">
-            <button>서비스 코드</button>
+        </div>
+        <ul class="infoLink">
+          <li class="infoList">
+            <a href="https://www.netflix.com/browse/audio-description">
+              화면 해설
+            </a>
+          </li>
+          <li class="infoList">
+            <a href="https://help.netflix.com/ko/"> 고객 센터 </a>
+          </li>
+          <li class="infoList">
+            <a href="https://www.netflix.com/kr/redeem"> 기프트카드 </a>
+          </li>
+          <li class="infoList">
+            <a href="https://media.netflix.com/ko/"> 미디어 센터 </a>
+          </li>
+          <li class="infoList">
+            <a href="https://ir.netflix.net/ir-overview/profile/default.aspx">
+              투자 정보(IR)
+            </a>
+          </li>
+          <li class="infoList">
+            <a href="https://jobs.netflix.com/"> 입사 정보 </a>
+          </li>
+          <li class="infoList">
+            <a href="https://help.netflix.com/legal/termsofuse"> 이용 약관 </a>
+          </li>
+          <li class="infoList">
+            <a href="https://help.netflix.com/legal/privacy"> 개인정보 </a>
+          </li>
+          <li class="infoList">
+            <a href="https://help.netflix.com/legal/notices"> 법적 고지 </a>
+          </li>
+          <li class="infoList">
+            <a href=""> 쿠키 설정 </a>
+          </li>
+          <li class="infoList">
+            <a href="https://help.netflix.com/legal/corpinfo"> 회사 정보 </a>
+          </li>
+          <li class="infoList">
+            <a href="https://help.netflix.com/ko/contactus"> 문의하기 </a>
+          </li>
+        </ul>
+        <div class="code">
+          <button>서비스 코드</button>
+        </div>
+        <div class="copyText">
+          <div class="copyTextBlock">
+            넷플릭스서비시스코리아 유한회사 통신판매업신고번호:
+            제2018-서울종로-0426호 전화번호: 080-001-9587
           </div>
-          <div class="copyText">
-            <div class="copyTextBlock">
-              넷플릭스서비시스코리아 유한회사 통신판매업신고번호:
-              제2018-서울종로-0426호 전화번호: 080-001-9587
-            </div>
-            <div class="copyTextBlock">대표: 레지널드 숀 톰프슨</div>
-            <div class="copyTextBlock">이메일 주소: korea@netflix.com</div>
-            <div class="copyTextBlock">
-              주소: 대한민국 서울특별시 종로구 우정국로 26, 센트로폴리스 A동
-              20층 우편번호 03161
-            </div>
-            <div class="copyTextBlock">사업자등록번호: 165-87-00119</div>
-            <div class="copyTextBlock">
-              클라우드 호스팅: Amazon Web Services Inc.
-            </div>
-            <div class="copyTextBlock">
-              <a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=1658700119"
-                >공정거래위원회 웹사이트</a
-              >
-            </div>
+          <div class="copyTextBlock">대표: 레지널드 숀 톰프슨</div>
+          <div class="copyTextBlock">이메일 주소: korea@netflix.com</div>
+          <div class="copyTextBlock">
+            주소: 대한민국 서울특별시 종로구 우정국로 26, 센트로폴리스 A동 20층
+            우편번호 03161
+          </div>
+          <div class="copyTextBlock">사업자등록번호: 165-87-00119</div>
+          <div class="copyTextBlock">
+            클라우드 호스팅: Amazon Web Services Inc.
+          </div>
+          <div class="copyTextBlock">
+            <a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=1658700119"
+              >공정거래위원회 웹사이트</a
+            >
           </div>
         </div>
       </footer>
